crates/math-core/src/snapshots/math_core__token_queue__tests__early_error.snap
---
source: crates/math-core/src/token_queue.rs
expression: "{x + \\unknowncmd + y}"
---
Error: Unknown command "\unknowncmd".
   ╭─[ <input>:1:6 ]
   │
 1 │ {x + \unknowncmd + y}
   │      ─────┬─────  
   │           ╰─────── unknown command
───╯
